# z2p

./: .dockerignore  .env  Cargo.toml  Dockerfile
.github/workflows/: rust.yml
migrations/: 20230619021740_create_subscriptions_table.sql  20230619140313_create_subscriptions_table.up.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
