[package]
name = "z2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "z2p"

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.26"
config = "0.13.3"
env_logger = "0.10.0"
serde = { version = "1.0.164", features = ["derive"] }
tokio = "1.28.2"
uuid = { version = "1.3.4", features = ["v4"] }

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.11.18"
