[package]
name = "z2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "z2p"

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.26"
config = "0.13.3"
log = "0.4.19"
once_cell = "1.18.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = "1.28.2"
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.5"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
uuid = { version = "1.3.4", features = ["v4"] }

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
reqwest = "0.11.18"
cargo-udeps = "0.1.40"
